--- a/btcd.conf
+++ b/btcd.conf
@@ -12,7 +12,7 @@
 ; environment variables are typically %VARIABLE%, but they must be accessed with
 ; $VARIABLE here.  Also, ~ is expanded to $LOCALAPPDATA on Windows.
 ; datadir=~/.btcd/data
-datadir=F:/goproject/src/github.com/wangzhen0101/wzbtc
+datadir=F:/goproject/data
 
 
 ; ------------------------------------------------------------------------------
@@ -338,8 +338,8 @@ datadir=F:/goproject/src/github.com/wangzhen0101/wzbtc
 ; You may also specify <subsystem>=<level>,<subsystem2>=<level>,... to set
 ; log level for individual subsystems.  Use btcd --debuglevel=show to list
 ; available subsystems.
- debuglevel=trace
- logdir=F:/goproject/src/github.com/wangzhen0101/wzbtc
+ debuglevel=debug
+ logdir=F:/goproject/log
 
 ; The port used to listen for HTTP profile requests.  The profile server will
 ; be disabled if this option is not specified.  The profile information can be
