--- a/btcd.conf
+++ b/btcd.conf
@@ -102,7 +102,8 @@ datadir=F:/goproject/data
 ; connect=[fe80::2]:8333
 
 ; Maximum number of inbound and outbound peers.
-; maxpeers=125
+ maxpeers=125
+; maxpeers=1
 
 ; Disable banning of misbehaving peers.
 ; nobanning=1
@@ -149,7 +150,7 @@ datadir=F:/goproject/data
 ; Only ipv4 localhost on non-standard port 8336:
 ;   listen=127.0.0.1:8336
 ; All interfaces on non-standard port 8336:
-;   listen=:8336
+   listen=:8336
 ; All ipv4 interfaces on non-standard port 8336:
 ;   listen=0.0.0.0:8336
 ; All ipv6 interfaces on non-standard port 8336:
@@ -272,11 +273,11 @@ datadir=F:/goproject/data
 
 ; Build and maintain a full hash-based transaction index which makes all
 ; transactions available via the getrawtransaction RPC.
-; txindex=1
+ txindex=1
 
 ; Build and maintain a full address-based transaction index which makes the
 ; searchrawtransactions RPC available.
-; addrindex=1
+ addrindex=1
 
 ; Delete the entire address index on start up, then exit.
 ; dropaddrindex=0
@@ -338,7 +339,9 @@ datadir=F:/goproject/data
 ; You may also specify <subsystem>=<level>,<subsystem2>=<level>,... to set
 ; log level for individual subsystems.  Use btcd --debuglevel=show to list
 ; available subsystems.
- debuglevel=debug
+; debuglevel=AMGR=info,PEER=debug,SYNC=info,CMGR=info,BCDB=info
+; debuglevel=PEER=trace
+ debuglevel=PEER=debug
  logdir=F:/goproject/log
 
 ; The port used to listen for HTTP profile requests.  The profile server will
